--- a/package.json
+++ b/package.json
@@ -5,55 +5,58 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@nestjs/cache-manager": "^3.0.0",
-    "@nestjs/common": "^11.0.6",
-    "@nestjs/config": "^4.0.0",
-    "@nestjs/core": "^11.0.6",
-    "@nestjs/microservices": "^11.0.6",
-    "@nestjs/mongoose": "^11.0.0",
-    "@nestjs/platform-express": "^11.0.6",
-    "@nestjs/schedule": "^5.0.1",
-    "@nestjs/swagger": "^11.0.3",
+    "@nestjs/cache-manager": "^2.1.1",
+    "@nestjs/common": "^10.3.0",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.3.0",
+    "@nestjs/microservices": "^10.3.0",
+    "@nestjs/mongoose": "^10.0.2",
+    "@nestjs/platform-express": "^10.3.0",
+    "@nestjs/schedule": "^4.0.0",
+    "@nestjs/swagger": "^7.2.0",
+    "@rush-hour-services/source": "file:",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.5",
     "axios": "^1.6.0",
-    "cache-manager": "^6.4.0",
+    "cache-manager": "^5.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "mongoose": "^8.9.5",
+    "mongoose": "^8.0.0",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.8.0",
+    "@eslint/js": "^8.56.0",
     "@nestjs/schematics": "^10.0.1",
-    "@nestjs/testing": "^10.0.2",
-    "@nx/eslint": "20.4.0",
-    "@nx/eslint-plugin": "20.4.0",
-    "@nx/jest": "20.4.0",
-    "@nx/js": "20.4.0",
-    "@nx/nest": "20.4.0",
-    "@nx/node": "20.4.0",
-    "@nx/web": "20.4.0",
-    "@nx/webpack": "20.4.0",
-    "@nx/workspace": "20.4.0",
-    "@swc-node/register": "~1.9.1",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
+    "@nestjs/testing": "^10.3.0",
+    "@nx/eslint": "17.2.8",
+    "@nx/eslint-plugin": "17.2.8",
+    "@nx/jest": "17.2.8",
+    "@nx/js": "17.2.8",
+    "@nx/nest": "17.2.8",
+    "@nx/node": "17.2.8",
+    "@nx/web": "17.2.8",
+    "@nx/webpack": "17.2.8",
+    "@nx/workspace": "17.2.8",
+    "@swc-node/register": "~1.6.8",
+    "@swc/core": "~1.3.96",
+    "@swc/helpers": "~0.5.3",
+    "@types/amqplib": "^0.10.6",
     "@types/jest": "^29.5.12",
-    "@types/node": "~18.16.9",
-    "eslint": "^9.8.0",
+    "@types/node": "^18.16.9",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
-    "nx": "20.4.0",
-    "prettier": "^2.6.2",
+    "nx": "17.2.8",
+    "prettier": "^3.1.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "tslib": "^2.3.0",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.19.0",
+    "tslib": "^2.6.2",
+    "typescript": "~5.3.3",
     "webpack-cli": "^5.1.4"
   }
 }
