--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/cache-manager": "^2.1.1",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
@@ -17,10 +18,12 @@
     "@rush-hour-services/source": "file:",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.5",
-    "axios": "^1.6.0",
+    "axios": "^1.7.9",
     "cache-manager": "^5.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "compression": "^1.7.5",
+    "helmet": "^8.0.0",
     "mongoose": "^8.0.0",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.1.13",
@@ -30,20 +33,22 @@
     "@eslint/js": "^8.56.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.3.0",
+    "@nx/devkit": "^17.2.8",
     "@nx/eslint": "17.2.8",
     "@nx/eslint-plugin": "17.2.8",
-    "@nx/jest": "17.2.8",
+    "@nx/jest": "^17.3.2",
     "@nx/js": "17.2.8",
     "@nx/nest": "17.2.8",
     "@nx/node": "17.2.8",
     "@nx/web": "17.2.8",
-    "@nx/webpack": "17.2.8",
+    "@nx/webpack": "^17.2.8",
     "@nx/workspace": "17.2.8",
-    "@swc-node/register": "~1.6.8",
+    "@swc-node/register": "^1.6.8",
     "@swc/core": "~1.3.96",
     "@swc/helpers": "~0.5.3",
     "@types/amqplib": "^0.10.6",
-    "@types/jest": "^29.5.12",
+    "@types/compression": "^1.7.5",
+    "@types/jest": "^29.5.14",
     "@types/node": "^18.16.9",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
@@ -51,9 +56,9 @@
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
-    "nx": "17.2.8",
+    "nx": "^17.2.8",
     "prettier": "^3.1.0",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "10.9.1",
     "tslib": "^2.6.2",
     "typescript": "~5.3.3",
