--- a/apps/worker/Dockerfile
+++ b/apps/worker/Dockerfile
@@ -11,14 +11,14 @@ COPY jest.preset.js ./
 COPY jest.config.ts ./
 
 # Copy project files
-COPY apps/gateway ./apps/gateway
-COPY shared ./shared
+COPY apps/worker ./apps/worker
+COPY shared/src ./shared/src
 
 # Install dependencies
 RUN npm ci
 
-# Build the application
-RUN npx nx build gateway
+# Build the application (Changed this line)
+RUN npx nx build worker
 
 # Production stage
 FROM node:18-alpine
@@ -26,7 +26,7 @@ FROM node:18-alpine
 WORKDIR /app
 
 # Copy built application
-COPY --from=builder /app/dist/apps/gateway ./
+COPY --from=builder /app/dist/apps/worker ./
 COPY --from=builder /app/package*.json ./
 
 # Install production dependencies only
@@ -34,10 +34,10 @@ RUN npm ci --only=production
 
 # Set environment variables
 ENV NODE_ENV=production
-ENV PORT=3000
+ENV PORT=3001
 
 # Expose the port the app runs on
-EXPOSE 3000
+EXPOSE 3001
 
 # Start the application
 CMD ["node", "main.js"]
