--- a/apps/cron/Dockerfile
+++ b/apps/cron/Dockerfile
@@ -15,7 +15,8 @@ COPY apps/cron ./apps/cron
 COPY shared/src ./shared/src
 
 # Install dependencies
-RUN npm ci
+#RUN npm ci
+RUN npm install --force
 
 # Build the application (Changed this line)
 RUN npx nx build cron
