--- a/apps/gateway/project.json
+++ b/apps/gateway/project.json
@@ -3,41 +3,40 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/gateway/src",
   "projectType": "application",
-  "tags": [],
   "targets": {
-    "build": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "webpack-cli build",
-        "args": ["node-env=production"]
-      },
-      "configurations": {
-        "development": {
-          "args": ["node-env=development"]
-        }
-      }
-    },
     "serve": {
-      "executor": "@nx/js:node",
-      "defaultConfiguration": "development",
-      "dependsOn": ["build"],
+      "executor": "@nrwl/node:node",
       "options": {
-        "buildTarget": "gateway:build",
-        "runBuildTargetDependencies": false
-      },
-      "configurations": {
-        "development": {
-          "buildTarget": "gateway:build:development"
-        },
-        "production": {
-          "buildTarget": "gateway:build:production"
-        }
+        "buildTarget": "api:build"
       }
+    }
+  },
+  "build": {
+    "executor": "@nx/webpack:webpack",
+    "outputs": [
+      "{options.outputPath}"
+    ],
+    "defaultConfiguration": "production",
+    "options": {
+      "target": "node",
+      "compiler": "tsc",
+      "outputPath": "dist/apps/gateway",
+      "main": "apps/gateway/src/main.ts",
+      "tsConfig": "apps/gateway/tsconfig.app.json",
+      "assets": [
+        "apps/gateway/src/assets"
+      ],
+      "isolatedConfig": true,
+      "webpackConfig": "apps/gateway/webpack.config.js"
     },
-    "test": {
-      "options": {
-        "passWithNoTests": true
+    "configurations": {
+      "development": {},
+      "production": {
+        "optimization": false,
+        "extractLicenses": true,
+        "inspect": false
       }
     }
   }
+}
 }
