--- a/package.json
+++ b/package.json
@@ -64,5 +64,8 @@
     "tslib": "^2.6.2",
     "typescript": "~5.3.3",
     "webpack-cli": "^5.1.4"
+  },
+  "resolutions": {
+    "@swc/core": "^1.3.107"
   }
 }
