--- a/apps/gateway/project.json
+++ b/apps/gateway/project.json
@@ -5,38 +5,37 @@
   "projectType": "application",
   "targets": {
     "serve": {
-      "executor": "@nrwl/node:node",
+      "executor": "@nx/js:node",
       "options": {
-        "buildTarget": "api:build"
+        "buildTarget": "gateway:build"
       }
-    }
-  },
-  "build": {
-    "executor": "@nx/webpack:webpack",
-    "outputs": [
-      "{options.outputPath}"
-    ],
-    "defaultConfiguration": "production",
-    "options": {
-      "target": "node",
-      "compiler": "tsc",
-      "outputPath": "dist/apps/gateway",
-      "main": "apps/gateway/src/main.ts",
-      "tsConfig": "apps/gateway/tsconfig.app.json",
-      "assets": [
-        "apps/gateway/src/assets"
-      ],
-      "isolatedConfig": true,
-      "webpackConfig": "apps/gateway/webpack.config.js"
     },
-    "configurations": {
-      "development": {},
-      "production": {
-        "optimization": false,
-        "extractLicenses": true,
-        "inspect": false
+    "build": {
+      "executor": "@nx/webpack:webpack",
+      "outputs": [
+        "{options.outputPath}"
+      ],
+      "defaultConfiguration": "production",
+      "options": {
+        "target": "node",
+        "compiler": "tsc",
+        "outputPath": "dist/apps/gateway",
+        "main": "apps/gateway/src/main.ts",
+        "tsConfig": "apps/gateway/tsconfig.app.json",
+        "assets": [
+          "apps/gateway/src/assets"
+        ],
+        "isolatedConfig": true,
+        "webpackConfig": "apps/gateway/webpack.config.js"
+      },
+      "configurations": {
+        "development": {},
+        "production": {
+          "optimization": false,
+          "extractLicenses": true,
+          "inspect": false
+        }
       }
     }
   }
-}
 }
