--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "@nx/eslint": "17.2.8",
     "@nx/eslint-plugin": "17.2.8",
     "@nx/jest": "^17.3.2",
-    "@nx/js": "17.2.8",
+    "@nx/js": "^17.2.8",
     "@nx/nest": "17.2.8",
-    "@nx/node": "17.2.8",
+    "@nx/node": "^17.2.8",
     "@nx/web": "17.2.8",
     "@nx/webpack": "^17.2.8",
     "@nx/workspace": "17.2.8",
