--- a/apps/cron/project.json
+++ b/apps/cron/project.json
@@ -6,24 +6,41 @@
   "tags": [],
   "targets": {
     "build": {
-      "executor": "nx:run-commands",
+      "executor": "@nx/webpack:webpack",
+      "outputs": [
+        "{options.outputPath}"
+      ],
+      "defaultConfiguration": "production",
       "options": {
-        "command": "webpack-cli build",
-        "args": ["node-env=production"]
+        "target": "node",
+        "compiler": "tsc",
+        "outputPath": "dist/apps/cron",
+        "main": "apps/cron/src/main.ts",
+        "tsConfig": "apps/cron/tsconfig.app.json",
+        "assets": [
+          "apps/cron/src/assets"
+        ],
+        "generatePackageJson": true,
+        "webpackConfig": "apps/cron/webpack.config.js"
       },
       "configurations": {
         "development": {
-          "args": ["node-env=development"]
+          "optimization": false,
+          "extractLicenses": false,
+          "inspect": false
+        },
+        "production": {
+          "optimization": true,
+          "extractLicenses": true,
+          "inspect": false
         }
       }
     },
     "serve": {
       "executor": "@nx/js:node",
       "defaultConfiguration": "development",
-      "dependsOn": ["build"],
       "options": {
-        "buildTarget": "cron:build",
-        "runBuildTargetDependencies": false
+        "buildTarget": "cron:build"
       },
       "configurations": {
         "development": {
@@ -32,11 +49,6 @@
         "production": {
           "buildTarget": "cron:build:production"
         }
-      }
-    },
-    "test": {
-      "options": {
-        "passWithNoTests": true
       }
     }
   }
