--- a/apps/worker/project.json
+++ b/apps/worker/project.json
@@ -1,43 +1,29 @@
 {
-  "name": "worker",
-  "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/worker/src",
-  "projectType": "application",
-  "tags": [],
-  "targets": {
-    "build": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "webpack-cli build",
-        "args": ["node-env=production"]
-      },
-      "configurations": {
-        "development": {
-          "args": ["node-env=development"]
-        }
-      }
+  "build": {
+    "executor": "nx:run-commands",
+    "options": {
+      "command": "webpack-cli build",
+      "args": [
+        "node-env=production"
+      ]
     },
-    "serve": {
-      "executor": "@nx/js:node",
-      "defaultConfiguration": "development",
-      "dependsOn": ["build"],
-      "options": {
-        "buildTarget": "worker:build",
-        "runBuildTargetDependencies": false
-      },
-      "configurations": {
-        "development": {
-          "buildTarget": "worker:build:development"
-        },
-        "production": {
-          "buildTarget": "worker:build:production"
-        }
+    "configurations": {
+      "development": {
+        "args": [
+          "node-env=development"
+        ]
       }
-    },
-    "test": {
-      "options": {
-        "passWithNoTests": true
-      }
+    }
+  },
+  "serve": {
+    "executor": "@nx/js:node",
+    "defaultConfiguration": "development",
+    "dependsOn": [
+      "build"
+    ],
+    "options": {
+      "buildTarget": "worker:build",
+      "runBuildTargetDependencies": false
     }
   }
 }
