--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "class-validator": "^0.14.1",
     "compression": "^1.7.5",
     "helmet": "^8.0.0",
+    "ioredis": "^5.4.2",
     "mongoose": "^8.0.0",
-    "redis": "^4.7.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -44,7 +44,7 @@
     "@nx/webpack": "^17.2.8",
     "@nx/workspace": "17.2.8",
     "@swc-node/register": "^1.6.8",
-    "@swc/core": "~1.3.96",
+    "@swc/core": "^1.4.13",
     "@swc/helpers": "~0.5.3",
     "@types/amqplib": "^0.10.6",
     "@types/compression": "^1.7.5",
