--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "@rush-hour-services/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "build": "nx build",
+    "test": "nx test",
+    "serve": "nx serve",
+    "build:worker": "nx build worker"
+  },
   "private": true,
   "dependencies": {
     "@nestjs/axios": "^4.0.0",
