Added Repositories for Game and Board and implemented them in Cron, Worker and Api services

--- a/apps/cron/Dockerfile
+++ b/apps/cron/Dockerfile
@@ -16,7 +16,8 @@ COPY shared/src ./shared/src
 
 # Install dependencies
 #RUN npm ci
-RUN npm install --force
+RUN npm install --force && \
+    npm install -g nx @nrwl/cli
 
 # Build the application (Changed this line)
 RUN npx nx build cron
